make sure page selector is always visible on long pages

--- a/panels/sidepanel.css
+++ b/panels/sidepanel.css
@@ -114,6 +114,11 @@ body.show-advanced :is(col, tr).advanced {
     visibility: visible;
 }
 
+#panel {
+    position: sticky;
+    top: 0;
+}
+
 body.standalone #panel {
     display: none;
 }
